# ShipShare

./: .dockerignore  .gitignore  REVISED_SUMMARY_PIPELINE.md  docker-compose.env.example  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
apps/core/: .dockerignore  .env.example  Dockerfile  manage.py  pyproject.toml
apps/core-app/: Dockerfile  pyproject.toml
apps/core-app/core_app/: settings.py  urls.py
apps/core-app/github_integration/: github_api.py  models.py  permissions.py
apps/core-app/identity/: github.py  models.py  urls.py  views.py
apps/core-app/identity/migrations/: 0001_initial.py
apps/core/github_integration/: admin.py  github_api.py  serializers.py  services.py  urls.py  views.py
apps/core/github_integration/migrations/: 0001_initial.py
apps/core/identity/: admin.py  github.py  serializers.py
apps/core/identity/migrations/: 0001_initial.py
apps/github-webhook-app/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/github-webhook-app/tests/: test_github.py
apps/github-webhook-app/webhook_app/: __init__.py  config.py  dedup.py  github.py  internal_client.py  main.py
apps/web/: next.config.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: waitlist-form.tsx
apps/web/components/ui/: button.tsx  card.tsx  input.tsx  sonner.tsx
docs/: GITHUB_INTEGRATION_BOUNDARY_NOTES.md  SUMMARY_PIPELINE_DESIGN.md  pr_enrichment.md
