[project]
name = "shipshare-python-workspace"
version = "0.1.0"
description = "Root uv workspace for ShipShare Python applications."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-django>=4.9.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "apps/core",
  "apps/github-webhook-app",
]
